crates/aranya-policy-compiler/tests/data/functions/return_type_result_ok_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
1 | function f() result[struct Nonexistent, int] {
  |                            ^^^^^^^^^^^ struct `Nonexistent` not defined
